# customer-service-master

./: .env.example  README.md  main.py  pyproject.toml
atguigu/api/: app.py  dependencies.py  schemas.py
atguigu/api/routers/: chat_router.py
atguigu/chitchat/: handler.py  responder.py
atguigu/clarify/: responder.py
atguigu/conf/: config.py
atguigu/domain/: contexts.py  messages.py  state.py
atguigu/engine/: builder.py  dialogue_engine.py
atguigu/infrastructure/: database.py  http_client.py  llm.py
atguigu/knowledge/: handler.py  intents.py  providers.py  registry.py  responder.py
atguigu/plan/: models.py  turn_planner.py  validator.py
atguigu/prompts/: history_builder.py  prompt_loader.py
atguigu/prompts/jinja2/: turn_plan.jinja2
atguigu/repository/: dialogue_state_repository.py
atguigu/service/: dialogue_service.py
atguigu/task/: handler.py
atguigu/task/action/: base.py  builder.py  registry.py  runner.py
atguigu/task/action/builtin/: action_listen.py  action_response.py
atguigu/task/action/custom/: lookup_logistics.py  lookup_order_status.py  (+1 more)
atguigu/task/command/: models.py  processor.py
atguigu/task/flow/: executor.py  links.py  loader.py  models.py  steps.py
docs/: 01-电商小二-项目概述.md  02-电商小二-对话状态设计.md  04-电商小二-DialogueEngine设计.md  05-电商小二-TaskHandler设计.md  06-电商小二-KnowledgeHandler&ChitChatHandler设计.md  07-电商小二-TaskHandler实现.md  08-电商小二-KnowledgeHandler实现.md  09-电商小二-ChitChatHandler实现.md  10-电商小二-TurnPlanner实现.md  11-电商小二-DialogueEngine实现.md  12-电商小二-FastAPI依赖注入和生命周期.md
flow_config/: system_flows.yml
